fixed button flexwrap on mobile

--- a/style.css
+++ b/style.css
@@ -62,8 +62,10 @@ h1, h2, h3, h4 {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
     margin: 20px 0;
+    width: 100%;
 }
 
 #dayToggle {
